k8s/base/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: lenra-documentation
  labels:
    k8s-app: lenra-documentation
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: lenra-documentation
  template:
    metadata:
      name: lenra-documentation
      labels:
        k8s-app: lenra-documentation
    spec:
      # Utilisateur non-root entraine des problèmes avec Nginx
      securityContext:
        runAsUser: 1001
        fsGroup: 1001
      containers:
        - name: lenra-documentation
          image: "registry.gitlab.com/lenra/platform/documentation"
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          securityContext:
            privileged: false
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 10
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 1
            failureThreshold: 2
            successThreshold: 1
          resources:
            requests:
              cpu: "5m"
              memory: "5Mi"
            limits:
              cpu: "50m"
              memory: "50Mi"
      restartPolicy: Always
      imagePullSecrets:
        - name: gitlab-registry
  revisionHistoryLimit: 2
